Overflow issue solved

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-
+  overflow-x: hidden;
   /* border: 1px solid black; */
 }
 
